--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-  {
+{
   "scripts": {
     "test": "webpack-dev-server --inline --hot --config webpack.dev.js",
     "test2": "webpack --watch --config webpack.dev.js",
@@ -16,14 +16,15 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "casual": "^1.5.17",
     "css-loader": "^0.28.4",
     "file-loader": "^0.11.2",
     "postcss-loader": "^2.0.6",
     "style-loader": "^0.18.2",
+    "uglifyjs-webpack-plugin": "^0.4.6",
     "url-loader": "^0.5.9",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0",
-    "webpack-merge": "^4.1.0",
-    "uglifyjs-webpack-plugin": "^0.4.6"
+    "webpack-merge": "^4.1.0"
   }
 }
